# chugin-rave

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  blit.ck  build-pkg-mac.ck  build-pkg-win.ck  help.ck  lfo.ck  load_test.ck  makefile  memory_test.ck  mic.ck  rave.cpp  rave_test.ck
.github/workflows/: release.yml
installer/mac/: 1-codesign.sh  2-package.sh  3-notarize.sh  makefile
rave_deps/nn_tilde/: README.md
